--- a/index.xhtml
+++ b/index.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>UJD — UNIX / Julian date</title>
+    <title>UJD — Metric time‐keeping for humans!</title>
     <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" type="text/html;charset=utf-8"/>
     <style>
       /* <![CDATA[ */
